--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="title_activity_main">CashTracker</string>
     <string name="title_activity_sign_in">Sign in</string>
     <string name="title_activity_sign_up">Sign up</string>
+    <string name="title_activity_add_purchase">Add purchase</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
